# passmate

./: README.md  Requirement.md  package-lock.json
docs/: pitch.md
source/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
source/src/: api.ts  style.css
source/src-tauri/: Cargo.toml  tauri.conf.json
source/src-tauri/src/: api.rs  main.rs
source/src/Password/: Password.classes.ts
source/src/components/: AddPassword.form.tsx  AddPassword.module.css  User.component.tsx  cell-component.tsx
source/src/components/tableCell/: password.cell.tsx
source/src/hooks/: userStorage.hook.ts
source/src/pages/: DeviceInformations.tsx  DeviceOverview.tsx  Help.tsx  Login.tsx  PasswordOverview.tsx  hello.js  index copy.tsx  index.tsx  notes
source/src/utils/: Copyright.js  Nav.tsx  styleCards.css
